fixed link in interfacing

--- a/SSfMT/Practicals/Interfacing.html
+++ b/SSfMT/Practicals/Interfacing.html
@@ -299,7 +299,7 @@ OSCdef(\sendTrig, { arg msg, time, addr, recvPort;
 <h2><a class='anchor' name='Exercises'>Exercises</a></h2>
 <ol>
 <li>Select at least 2 types of devices (MIDI, HID, OSC) to interface with SuperCollider (for example, an iPad and a game controller)<li>Connect the devices and make sure you are receiving incoming data<li>Map the values to a set of Ndefs, SynthDef and/or Patterns.</ol>
-<div class='note'><span class='notelabel'>NOTE:</span> You can use the sounds, effects, etc., from the following examples: <a href="./../../Code Examples/FX Fun.html">FX Fun</a>, <a href="./../../Code Examples/Synth Fun.html">Synth Fun</a></div><h2><a class='anchor' name='Keyboard%20and%20Mouse'>Keyboard and Mouse</a></h2>
+<div class='note'><span class='notelabel'>NOTE:</span> You can use the sounds, effects, etc., from the following examples: <a href="./../../SSfMT/Code Examples/Simple FX.html">Simple FX</a>, <a href="./../../SSfMT/Code Examples/Synth Fun.html">Synth Fun</a></div><h2><a class='anchor' name='Keyboard%20and%20Mouse'>Keyboard and Mouse</a></h2>
 <h3><a class='anchor' name='Triggering%20from%20the%20computer%20keyboard:'>Triggering from the computer keyboard:</a></h3>
 
 <p>A <code class='code prettyprint lang-sc'>SynthDef</code>:<pre class='code prettyprint lang-sc'>(
