--- a/SSfMT.html
+++ b/SSfMT.html
@@ -44,7 +44,7 @@
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
-<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./SSfMT/Practicals/Interfacing.html">Interfacing</a></ul>
+<li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./SSfMT/Practicals/Interfacing.html">Interfacing</a><li><a href="./SSfMT/Practicals/Organising your Code.html">Organising your Code</a></ul>
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
@@ -55,7 +55,7 @@
 <li><a href="./SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./SSfMT/Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./SSfMT/Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./SSfMT/Study Guides/Buffer Tricks.html">Buffer Tricks</a></ul>
 <h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
 <ul>
-<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/Simple FX.html">Simple FX</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a><li><a href="./SSfMT/Code Examples/Putting Things Together.html">Putting Things Together</a></ul>
+<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/Simple FX.html">Simple FX</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a></ul>
 <h2><a class='anchor' name='News'>News</a></h2>
 
 <p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Events'>Events</a></h3>
